--- a/Datareadingcleaning.ipynb
+++ b/Datareadingcleaning.ipynb
@@ -408,12 +408,12 @@
     "\n",
     "# Verificar valores fuera de los límites en las columnas PAY_0 a PAY_6\n",
     "for columna in ['PAY_1', 'PAY_2', 'PAY_3', 'PAY_4', 'PAY_5', 'PAY_6']:\n",
-    "    # Eliminar filas con valores atípicos en la columna \"EDUCATION\"\n",
+    "    # Eliminar filas con valores atípicos en la columna\n",
     "    datos_excel = datos_excel[datos_excel[columna].isin(valores_permitidos)]\n",
     "\n",
     "\n",
     "for columna in ['PAY_1', 'PAY_2', 'PAY_3', 'PAY_4', 'PAY_5', 'PAY_6']:      \n",
-    "    # Reemplazar el valor 0 por -1 en la columna \"EDUCATION\"\n",
+    "    # Reemplazar el valor 0 por -1 en la columna \n",
     "    datos_excel[columna] = datos_excel[columna].replace(0, -1)"
    ]
   },
@@ -428,6 +428,7 @@
     "for columna in ['PAY_1', 'PAY_2', 'PAY_3', 'PAY_4', 'PAY_5', 'PAY_6']:\n",
     "    datos_excel[columna] = datos_excel[columna].replace(mapeo__pay)\n",
     "\n",
+    "#Mirar esto\n",
     "\n"
    ]
   },
