--- a/Modelo_RedNeuronal.ipynb
+++ b/Modelo_RedNeuronal.ipynb
@@ -751,7 +751,9 @@
     "# Evaluar el modelo\n",
     "loss, accuracy = model.evaluate(X_test, y_test)\n",
     "print(\"Test Loss:\", loss)\n",
-    "print(\"Test Accuracy:\", accuracy)\n"
+    "print(\"Test Accuracy:\", accuracy)\n",
+    "\n",
+    "#Mirar esto\n"
    ]
   }
  ],
