--- a/Modelo_RedNeuronal.ipynb
+++ b/Modelo_RedNeuronal.ipynb
@@ -252,7 +252,9 @@
     "datos_excel = datos_excel.apply(pd.to_numeric, errors='coerce')\n",
     "\n",
     "\n",
-    "datos_excel.head()\n"
+    "datos_excel.head()\n",
+    "\n",
+    "#Cambios"
    ]
   },
   {
