primera actualizacion julian

--- a/Datareadingcleaning.ipynb
+++ b/Datareadingcleaning.ipynb
@@ -396,14 +396,6 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#Hola este cambio lo hace juliancho."
-   ]
-=======
    "execution_count": 13,
    "metadata": {},
    "outputs": [],
@@ -657,8 +649,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
->>>>>>> main
+   "source": [
+    "#juliancho está haciendo un cambio."
+   ]
   }
  ],
  "metadata": {
